[package]
name = "marsdown"
version = "0.1.9"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "Markdown to html parser"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/wafelack/marsdown"
keywords = ["parser", "markdown", "html", "utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lines_from_file = "0.1.2"
